# time-series-for-unemployment-and-natural-gas-using-prophet-and-plotly-in-python

./: 2023-12-13_Time-series-for-unemployment-and-natural-gas-using-Prophet-and-Plotly-in-Python-cc0fb7417a1f.py  README.md  article.md  natural gas correlations.ipynb  natural gas correlations.py  pyproject.toml
legacy/: natural gas correlations.py
natural_gas_correlations/: __init__.py  create_sample_time_series_data_2.py  create_synthetic_stock_data.py  create_volatility_animation.py  fetch_japan_natural_gas_price_data.py  fetch_japan_natural_gas_price_data_2.py  fetch_japan_natural_gas_price_data_3.py  steps.py
